--- a/实验·误差分析.md
+++ b/实验·误差分析.md
@@ -122,3 +122,6 @@ $$
 > 估计总体的标准差$\sigma$时所使用的统计量是样本的方差$s$, 而$s$必须用到样本平均数$\bar{x}$来计算. $\bar{x}$在抽样完成后已确定, 所以大小为$n$的样本只有$n-1$个自由度.
 
 ### 置信区间与置信度
+
+### 不确定度
+
