--- a/实验·误差分析.md
+++ b/实验·误差分析.md
@@ -113,7 +113,7 @@ $$
 
 其中$\bar{x}$为样本均值.
 
-这里的$\sigma$是对(总体)标准差的一个估计, 即可证$E(s)=\sigma$. 此时估计是无偏(unbiased)的.
+这里的$\sigma$是对(总体)标准差的一个估计, 即可证$E(s^2)=\sigma^2$. 此时估计是无偏(unbiased)的.
 
 ==注意样本标准差$\bar{x}$和总体标准差$\mu$的差异, $\bar{x} \ne \mu$正是以$n-1$替换$n$的原因.==
 
